Update for Flutter 3.38 / Dart 3.10 compatibility
- Update Dart SDK constraint to >=2.12.0 <4.0.0
- Update Flutter constraint to >=3.0.0
- Update Android: compileSdk 34, minSdk 21, Gradle 8.3, AGP 8.1.0
- Update iOS deployment target to 12.0
- Update macOS deployment target to 10.14
- Remove deprecated PluginRegistry.Registrar import
- Update Kotlin version to 2.1.0 in example app
- Replace deprecated jcenter with mavenCentral
- Add namespace to Android build config (required for AGP 8+)
- Add GitHub Actions workflow for pub.dev publishing
- Add Cursor coding guidelines

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,27 +4,33 @@ version '1.0'
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.android.tools.build:gradle:8.1.0'
     }
 }
 
 rootProject.allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 30
+    namespace 'io.yamsergey.flutter.platform_proxy'
+    compileSdk 34
 
     defaultConfig {
-        minSdkVersion 16
+        minSdk 21
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 }
